# bevy-animated-text

./: Cargo.toml  README.md
examples/: hello_world.rs  text_2d.rs  ui.rs
src/: lib.rs
